--- a/maven/rms-donation-manager/src/main/java/org/rms/web/main.html
+++ b/maven/rms-donation-manager/src/main/java/org/rms/web/main.html
@@ -10,7 +10,12 @@
 	</head>
 	<body>
 		<div ng-app="mainApp">
-			<div ng-view></div>
+			<div ng-view>
+				<script type="text/ng-template" id="viewPerson.html" src="viewPerson.js"></script>
+				<script type="text/ng-template" id="createPerson.html" src="createPerson.js"></script>
+				<script type="text/ng-template" id="modifyPerson.html" src="modifyPerson.js"></script>
+				<script type="text/ng-template" id="removePerson.html" src="removePerson.js"></script>
+			</div>
 		</div>
 	</body>
 </html>
