--- a/maven/rms-donation-manager/src/main/java/org/rms/web/main.html
+++ b/maven/rms-donation-manager/src/main/java/org/rms/web/main.html
@@ -4,18 +4,20 @@
 		<meta charset="ISO-8859-1">
 		<title>RMMS Toronto</title>
 		
-		<!--Review the URLs for the libraries -->
+		<!--Review the URLs for the libraries 
 		<script src="resources/angular.min.js"></script>
-		<script src="resources/angular-route.min.js"></script>
+		<script src="resources/angular-route.min.js"></script>-->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 	</head>
 	<body>
 		<div ng-app="mainApp">
 		
 			<!-- Testing the view functioning (instead of these there will be buttons)-->
-			<p><a href="#viewPerson">View Person</a></p>
-			<p><a href="#createPerson">Create Person</a></p>
-			<p><a href="#modifyPerson">Modify Person</a></p>
-			<p><a href="#removePerson">Remove Person</a></p>
+			<p><a href="#!viewPerson">View Person</a></p>
+			<p><a href="#!createPerson">Create Person</a></p>
+			<p><a href="#!modifyPerson">Modify Person</a></p>
+			<p><a href="#!removePerson">Remove Person</a></p>
 			<!-- end of test -->
 
 			<!-- The different views will be shown here -->
