#11 - refactored persons page.

--- a/rms-donation-manager/src/main/resources/static/persons.html
+++ b/rms-donation-manager/src/main/resources/static/persons.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<h1>User Center</h1>
+	<h1>People Finder</h1>
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3 class="panel-title">Search</h3>
@@ -38,5 +38,5 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>{{persons._embedded}}</p>
+	<!-- <p>{{persons._embedded}}</p> -->
 </div>
