--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -75,7 +75,7 @@
 					<div class='col-sm-8'>
 						<div class='form-group'>
 							<label for='info'>Information</label>
-							<textarea class='form-control' name='info' ng-model="person.info" placeholder="Extra information" rows='2'></textarea>
+							<textarea class='form-control' name='info' ng-model="person.info" placeholder="Extra information" rows='1'></textarea>
 						</div>
 						<div class='text-right'>
 							<a ng-click="cancel()" class="btn btn-small">cancel</a>
@@ -85,39 +85,66 @@
 				</div>
 			</form>
 		</div>
-		<form name="personAddressesForm">
-			<div class='col-sm-14'>
-				<table class="table table-striped">
-					<thead>
-						<tr>
-							<th>Address</a></th>
-							<th>Address2</th>
-							<th>City</th>
-							<th>Province</th>
-							<th>Postal Code</th>
-							<th>P.O. Box</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr class="form-group" ng-repeat="pa in personAddress._embedded.addresses">
-							<ng-form name="personAddresForm">
-								<td><input type="text" id="address" class='form-control' ng-model="pa.address" /></td>
-								<td><input type="text" id="address2" class='form-control' ng-model="pa.address2" /></td>
-								<td><input type="text" id="city" class='form-control' ng-model="pa.city" /></td>
-								<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
-								<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
-								<td><input type="text" id="poBox" class='form-control' ng-model="pa.poBox" /></td>
-							</ng-form>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</form>
+		<div class='well'>
+			<h2>Addresses</h2>
+			<form name="personAddressesForm">
+				<div class='col-sm-14'>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Address</a></th>
+								<th>Address2</th>
+								<th>City</th>
+								<th>Province</th>
+								<th>Postal Code</th>
+								<th>P.O. Box</th>
+								<th><a href="addPersonAddress()">+ Address</a></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="form-group" ng-repeat="pa in personAddress._embedded.addresses">
+								<ng-form name="personAddresForm">
+									<td><input type="text" id="address" class='form-control' ng-model="pa.address" /></td>
+									<td><input type="text" id="address2" class='form-control' ng-model="pa.address2" /></td>
+									<td><input type="text" id="city" class='form-control' ng-model="pa.city" /></td>
+									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
+									<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
+									<td><input type="text" id="poBox" class='form-control' ng-model="pa.poBox" /></td>
+									<td><a ng-click="updatePersonAddress()" class="btn btn-small btn-primary">update</a></td>
+								</ng-form>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</form>
+		</div>
+		<div class='well'>
+			<h2>Organizations</h2>
+			<form name="personOrganizationsForm">
+				<div class='col-sm-14'>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Name</a></th>
+								<th><a href="addPersonOrganization()">+ Organization</a></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="form-group" ng-repeat="po in personOrganization._embedded.organizations">
+								<ng-form name="personOrganizationForm">
+									<td><input type="text" id="name" class='form-control' ng-model="po.name" /></td>
+									<td><a ng-click="updatePersonOrganization()" class="btn btn-small btn-primary">update</a></td>
+								</ng-form>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</form>
+		</div>
 	</div>
-	<p>{{ personAddress }}</p>
+
         
 <!-- 	private List<Donation> donations; -->
 <!-- 	private List<Ticket> tickets; -->
-<!-- 	private List<Address> addresses; -->
-<!-- 	private List<Organization> organizations; -->
+
 </div>
