#11 - sending person address to the JS function

--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -110,7 +110,7 @@
 									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
 									<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
 									<td><input type="text" id="poBox" class='form-control' ng-model="pa.poBox" /></td>
-									<td><a ng-click="updatePersonAddress()" class="btn btn-small btn-primary">update</a></td>
+									<td><a ng-click="updatePersonAddress(pa)" class="btn btn-small btn-primary">update</a></td>
 								</ng-form>
 							</tr>
 						</tbody>
