#9 - added country to the person address UI

--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -95,9 +95,10 @@
 								<th>Address</a></th>
 								<th>Address2</th>
 								<th>City</th>
-								<th>Province</th>
-								<th>Postal Code</th>
 								<th>P.O. Box</th>
+								<th>Postal Code</th>
+								<th>Province</th>
+								<th>Country</th>
 								<th><a href="addPersonAddress()">+ Address</a></th>
 							</tr>
 						</thead>
@@ -107,9 +108,10 @@
 									<td><input type="text" id="address" class='form-control' ng-model="pa.address" /></td>
 									<td><input type="text" id="address2" class='form-control' ng-model="pa.address2" /></td>
 									<td><input type="text" id="city" class='form-control' ng-model="pa.city" /></td>
-									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
-									<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
 									<td><input type="text" id="poBox" class='form-control' ng-model="pa.poBox" /></td>
+									<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
+									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
+									<td><input type="text" id="country" class='form-control' ng-model="pa.country" /></td>
 									<td><a ng-click="updatePersonAddress(pa)" class="btn btn-small btn-primary">update</a></td>
 								</ng-form>
 							</tr>
