--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -113,6 +113,7 @@
 									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
 									<td><input type="text" id="country" class='form-control' ng-model="pa.country" /></td>
 									<td><a ng-click="updatePersonAddress(pa)" class="btn btn-small btn-primary">update</a></td>
+									<td><a ng-click="deletePersonAddress(pa)" class="btn btn-small btn-primary">delete</a></td>
 								</ng-form>
 							</tr>
 						</tbody>
