--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -99,7 +99,7 @@
 								<th>Postal Code</th>
 								<th>Province</th>
 								<th>Country</th>
-								<th><a href="addPersonAddress()">+ Address</a></th>
+								<th><a ng-hide="addPersonAddressElem" ng-click="getAddresses()">+ Address</a></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -113,8 +113,28 @@
 									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
 									<td><input type="text" id="country" class='form-control' ng-model="pa.country" /></td>
 									<td><a ng-click="updatePersonAddress(pa)" class="btn btn-small btn-primary">update</a></td>
-									<td><a ng-click="deletePersonAddress(pa)" class="btn btn-small btn-primary">delete</a></td>
+									<td><a ng-click="deletePersonAddress(pa._links.self.href,$index)" class="btn btn-small btn-primary">delete</a></td>
 								</ng-form>
+							</tr>
+							<tr ng-show="addPersonAddressElem">
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.address"/></th>
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.address2"/></th>
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.city"/></th>
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.poBox"/></th>
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.postalCode"/></th>
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.province"/></th>
+								<th><input type="text" class='form-control' ng-model="newPersonAddress.country"/></th>
+								<th><a ng-click="addPersonAddress()" class="btn btn-small btn-primary">add</a></th>
+								<th><a ng-click="addPersonAddressElem=false" class="btn btn-small btn-primary">cancel</a></th>
+							</tr>
+							<tr ng-show="addPersonAddressElem" ng-repeat="a in addresses._embedded.addresses | filter: newPersonAddress.address">
+								<td><a ng-click="setPersonAddress(a)">{{a.address}}</a></td>
+								<td>{{a.address2}}</td>
+								<td>{{a.city}}</td>
+								<td>{{a.poBox}}</td>
+								<td>{{a.postalCode}}</td>
+								<td>{{a.province}}</td>
+								<td>{{a.country}}</td>
 							</tr>
 						</tbody>
 					</table>
@@ -129,7 +149,7 @@
 						<thead>
 							<tr>
 								<th>Name</a></th>
-								<th><a href="addPersonOrganization()">+ Organization</a></th>
+								<th><a ng-hide="addPersonAddressElem" ng-click="getOrganizations()">+ Organization</a></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -137,7 +157,16 @@
 								<ng-form name="personOrganizationForm">
 									<td><input type="text" id="name" class='form-control' ng-model="po.name" /></td>
 									<td><a ng-click="updatePersonOrganization(po)" class="btn btn-small btn-primary">update</a></td>
+									<td><a ng-click="deletePersonOrganization(po._links.self.href,$index)" class="btn btn-small btn-primary">delete</a></td>
 								</ng-form>
+							</tr>
+							<tr ng-show="addPersonOrganizationElem">
+								<td><input type="text" class='form-control' ng-model="newPersonOrganization.name"/></td>
+								<td><a ng-click="addPersonOrganization()" class="btn btn-small btn-primary">add</a></td>
+								<td><a ng-click="addPersonOrganizationElem=false" class="btn btn-small btn-primary">cancel</a></td>
+							</tr>
+							<tr ng-show="addPersonOrganizationElem" ng-repeat="o in organizations._embedded.organizations | filter: newPersonOrganization.name">
+								<td><a ng-click="setPersonOrganization(o)">{{o.name}}</a></td>
 							</tr>
 						</tbody>
 					</table>
