#11- View person: adds and deletes addresses and organizations

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -8,6 +8,8 @@
 <script src="scripts/rms.dm.app.js"></script>
 <script src="scripts/person.controller.js"></script>
 <script src="scripts/person.services.js"></script>
+<script src="scripts/address.services.js"></script>
+<script src="scripts/organization.services.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
