#11- New people can be added now

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
 <script src="scripts/angular-route.js"></script>
 <script src="scripts/rms.dm.app.js"></script>
 <script src="scripts/person.controller.js"></script>
+<script src="scripts/new.person.controller.js"></script>
 <script src="scripts/person.services.js"></script>
 <script src="scripts/address.services.js"></script>
 <script src="scripts/organization.services.js"></script>
