--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<h1>{{person.title}} {{person.firstName}} {{person.lastName}}</h1>
+	<h1 ng-hide="newPersonView">{{person.title}} {{person.firstName}} {{person.lastName}}</h1>
 	<div class="panel panel-default">
 		<div class='well'>
 			<form name="personForm">
@@ -77,7 +77,7 @@
 							<label for='info'>Information</label>
 							<textarea class='form-control' name='info' ng-model="person.info" placeholder="Extra information" rows='1'></textarea>
 						</div>
-						<div class='text-right'>
+						<div ng-hide="newPersonView" class='text-right'>
 							<a ng-click="cancel()" class="btn btn-small">cancel</a>
 							<a ng-click="updatePerson()" class="btn btn-small btn-primary">update</a>
 						</div>
@@ -103,7 +103,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="form-group" ng-form="personAddresForm" ng-repeat="pa in personAddress._embedded.addresses">
+							<tr class="form-group" ng-form="personAddresForm" ng-repeat="pa in personAddress.addresses">
 								<ng-form name="personAddressForm">
 									<td><input type="text" id="address" class='form-control' ng-model="pa.address" /></td>
 									<td><input type="text" id="address2" class='form-control' ng-model="pa.address2" /></td>
@@ -112,8 +112,8 @@
 									<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
 									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
 									<td><input type="text" id="country" class='form-control' ng-model="pa.country" /></td>
-									<td><a ng-click="updatePersonAddress(pa)" class="btn btn-small btn-primary">update</a></td>
-									<td><a ng-click="deletePersonAddress(pa._links.self.href,$index)" class="btn btn-small btn-primary">delete</a></td>
+									<td><a ng-click="updatePersonAddress(pa, $index)" class="btn btn-small btn-primary">update</a></td>
+									<td><a ng-click="deletePersonAddress(pa._links.self.href,$index)" ng-hide="newPersonView" class="btn btn-small btn-primary">delete</a></td>
 								</ng-form>
 							</tr>
 							<tr ng-show="addPersonAddressElem">
@@ -149,15 +149,15 @@
 						<thead>
 							<tr>
 								<th>Name</a></th>
-								<th><a ng-hide="addPersonAddressElem" ng-click="getOrganizations()">+ Organization</a></th>
+								<th><a ng-hide="addPersonOrganizationElem" ng-click="getOrganizations()">+ Organization</a></th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="form-group" ng-repeat="po in personOrganization._embedded.organizations">
+							<tr class="form-group" ng-repeat="po in personOrganization.organizations">
 								<ng-form name="personOrganizationForm">
 									<td><input type="text" id="name" class='form-control' ng-model="po.name" /></td>
 									<td><a ng-click="updatePersonOrganization(po)" class="btn btn-small btn-primary">update</a></td>
-									<td><a ng-click="deletePersonOrganization(po._links.self.href,$index)" class="btn btn-small btn-primary">delete</a></td>
+									<td><a ng-click="deletePersonOrganization(po._links.self.href,$index)" ng-hide="newPersonView" class="btn btn-small btn-primary">delete</a></td>
 								</ng-form>
 							</tr>
 							<tr ng-show="addPersonOrganizationElem">
@@ -172,6 +172,10 @@
 					</table>
 				</div>
 			</form>
+			<div ng-show="newPersonView" class='text-right'>
+				<a ng-click="cancel()" class="btn btn-small">cancel</a>
+				<a ng-click="addPerson()" class="btn btn-small btn-primary">Add</a>
+			</div>
 		</div>
 	</div>
 
