--- a/rms-donation-manager/src/main/resources/static/persons.html
+++ b/rms-donation-manager/src/main/resources/static/persons.html
@@ -22,6 +22,7 @@
 				<th>Language</th>
 				<th>Phone Number</th>
 				<th>Email</th>
+				<th><a href="#!/newperson">+ Person</a></th>
 			</tr>
 		</thead>
 		<tbody>
