--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -8,9 +8,12 @@
 <script src="scripts/rms.dm.app.js"></script>
 <script src="scripts/person.controller.js"></script>
 <script src="scripts/new.person.controller.js"></script>
+<script src="scripts/ticket.controller.js"></script>
+<script src="scripts/new.ticket.controller.js"></script>
 <script src="scripts/person.services.js"></script>
 <script src="scripts/address.services.js"></script>
 <script src="scripts/organization.services.js"></script>
+<script src="scripts/ticket.services.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
