#11 - Ticket interface and controller

--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -92,7 +92,7 @@
 					<table class="table table-striped">
 						<thead>
 							<tr>
-								<th>Address</a></th>
+								<th>Address</th>
 								<th>Address2</th>
 								<th>City</th>
 								<th>P.O. Box</th>
