--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
 <script src="scripts/address.services.js"></script>
 <script src="scripts/organization.services.js"></script>
 <script src="scripts/ticket.services.js"></script>
+<script src="scripts/table.services.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
