--- a/rms-donation-manager/src/main/resources/static/ticket.html
+++ b/rms-donation-manager/src/main/resources/static/ticket.html
@@ -2,116 +2,96 @@
 	<h1 ng-hide="newTicketView">{{ticket.number}}</h1>
 	<div class="panel panel-default">
 		<div class='well'>
+			<h2>New Tickets</h2>
+			<form name="ticketForm">
+				<div class='col-sm-14'>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Number</a></th>
+								<th>Sold By</th>
+								<th>Year</th>
+								<th><a ng-hide="addTicketElem" ng-click="getTickets()">+ Ticket</a></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="form-group" ng-form="newTicketForm" ng-repeat="nt in newTickets">
+								<ng-form name="newTicketForm">
+									<td><input type="text" id="ticketNumber" class='form-control' ng-model="nt.ticketNumber" /></td>
+									<td><input type="text" id="soldBy" class='form-control' ng-model="nt.soldBy" /></td>
+									<td><input type="text" id="year" class='form-control' ng-model="nt.year" /></td>
+									<td><a ng-click="updateTicket(nt, $index)" class="btn btn-small btn-primary">update</a></td>
+									<td><a ng-click="deleteTicket($index)" class="btn btn-small btn-primary">delete</a></td>
+								</ng-form>
+							</tr>
+							<tr ng-show="addTicketElem">
+								<th><input type="text" class='form-control' ng-model="newTicket.ticketNumber"/></th>
+								<th><input type="text" class='form-control' ng-model="newTicket.soldBy"/></th>
+								<th><input type="text" class='form-control' ng-model="newTicket.year"/></th>
+								<th><a ng-click="addTicket()" class="btn btn-small btn-primary">add</a></th>
+								<th><a ng-click="addTicketElem=false" class="btn btn-small btn-primary">cancel</a></th>
+							</tr>
+							<tr ng-show="addTicketElem" ng-repeat="t in tickets._embedded.tickets | filter: newTicket.ticketNumber">
+								<td>{{t.ticketNumber}}</td>
+								<td>{{t.soldBy}}</td>
+								<td>{{t.year}}</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</form>
+		</div>
+		<div class='well'>
+			<h2>Sitting Table</h2>
 			<form name="ticketForm">
 				<div class='row'>
 					<div class='col-sm-2'>
 						<div class='form-group'>
-							<label for="title">Number</label>
-							<input type="text" id="title" class='form-control' ng-model="person.title" placeholder="Title" required"/>
-						</div>
-						<div class='form-group'>
-							<label for="homePhoneNumber">Sold By</label>
-							<input type="text" id="homePhoneNumber" class='form-control' ng-model="person.homePhoneNumber" placeholder="Home Phone Number" />
-						</div>
-						<div class='form-group'>
-							<label for="language">Year</label>
-							<input type="text" id="language" class='form-control' ng-model="person.language" placeholder="Language" />
+							<input type="text" id="sittingTable" class='form-control' ng-model="sittingTable.sittingTableNumber" placeholder="Table" />
 						</div>
 					</div>
 				</div>
 			</form>
 		</div>
+		
 		<div class='well'>
 			<h2>Bought By</h2>
-			<form name="ticketPersonForm">
-				<!--I stopped here -->
+			<form name="boughtByForm">
+				<div class='row'>
+					<div class='col-sm-2'>
+						<div class='form-group'>
+							<label><input type="radio" id="person" ng-model="addPersonElem" value="false" ng-click="getPersons()"/> Person</label>
+						</div>
+					</div>
+					<div class='col-sm-2'>
+						<div class='form-group'>
+							<label><input type="radio" id="organization" ng-model="addOrganizationElem" value="false" ng-click="getOrganizations()"/> Organization</label>
+						</div>
+					</div>
+				</div>
 				<div class='col-sm-14'>
 					<table class="table table-striped">
 						<thead>
 							<tr>
-								<th>Address</a></th>
-								<th>Address2</th>
-								<th>City</th>
-								<th>P.O. Box</th>
-								<th>Postal Code</th>
-								<th>Province</th>
-								<th>Country</th>
-								<th><a ng-hide="addPersonAddressElem" ng-click="getAddresses()">+ Address</a></th>
+								<th>Name</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="form-group" ng-form="personAddresForm" ng-repeat="pa in personAddress.addresses">
-								<ng-form name="personAddressForm">
-									<td><input type="text" id="address" class='form-control' ng-model="pa.address" /></td>
-									<td><input type="text" id="address2" class='form-control' ng-model="pa.address2" /></td>
-									<td><input type="text" id="city" class='form-control' ng-model="pa.city" /></td>
-									<td><input type="text" id="poBox" class='form-control' ng-model="pa.poBox" /></td>
-									<td><input type="text" id="postalCode" class='form-control' ng-model="pa.postalCode" /></td>
-									<td><input type="text" id="province" class='form-control' ng-model="pa.province" /></td>
-									<td><input type="text" id="country" class='form-control' ng-model="pa.country" /></td>
-									<td><a ng-click="updatePersonAddress(pa, $index)" class="btn btn-small btn-primary">update</a></td>
-									<td><a ng-click="deletePersonAddress(pa._links.self.href,$index)" ng-hide="newPersonView" class="btn btn-small btn-primary">delete</a></td>
-								</ng-form>
+							<tr class="form-group" ng-form="BoughtByForm">
+								<td><input type="text" id="Name" class='form-control' ng-model="buyer.name" /></td>
+								<td><a ng-click="buyer = {}" class="btn btn-small btn-primary">delete</a></td>
 							</tr>
-							<tr ng-show="addPersonAddressElem">
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.address"/></th>
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.address2"/></th>
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.city"/></th>
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.poBox"/></th>
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.postalCode"/></th>
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.province"/></th>
-								<th><input type="text" class='form-control' ng-model="newPersonAddress.country"/></th>
-								<th><a ng-click="addPersonAddress()" class="btn btn-small btn-primary">add</a></th>
-								<th><a ng-click="addPersonAddressElem=false" class="btn btn-small btn-primary">cancel</a></th>
-							</tr>
-							<tr ng-show="addPersonAddressElem" ng-repeat="a in addresses._embedded.addresses | filter: newPersonAddress.address">
-								<td><a ng-click="setPersonAddress(a)">{{a.address}}</a></td>
-								<td>{{a.address2}}</td>
-								<td>{{a.city}}</td>
-								<td>{{a.poBox}}</td>
-								<td>{{a.postalCode}}</td>
-								<td>{{a.province}}</td>
-								<td>{{a.country}}</td>
+							<tr ng-show="addBuyerElem" ng-repeat="b in buyers | filter: buyer.name">
+								<td ng-show="addPersonElem"><a ng-click="setBuyer(b)">{{b.firstName}} {{b.lastName}}</a></td>
+								<td ng-show="addOrganizationElem"><a ng-click="setBuyer(b)">{{b.name}}</a></td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
 			</form>
-		</div>
-		<div class='well'>
-			<h2>Organizations</h2>
-			<form name="personOrganizationsForm">
-				<div class='col-sm-14'>
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th>Name</a></th>
-								<th><a ng-hide="addPersonOrganizationElem" ng-click="getOrganizations()">+ Organization</a></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr class="form-group" ng-repeat="po in personOrganization.organizations">
-								<ng-form name="personOrganizationForm">
-									<td><input type="text" id="name" class='form-control' ng-model="po.name" /></td>
-									<td><a ng-click="updatePersonOrganization(po)" class="btn btn-small btn-primary">update</a></td>
-									<td><a ng-click="deletePersonOrganization(po._links.self.href,$index)" ng-hide="newPersonView" class="btn btn-small btn-primary">delete</a></td>
-								</ng-form>
-							</tr>
-							<tr ng-show="addPersonOrganizationElem">
-								<td><input type="text" class='form-control' ng-model="newPersonOrganization.name"/></td>
-								<td><a ng-click="addPersonOrganization()" class="btn btn-small btn-primary">add</a></td>
-								<td><a ng-click="addPersonOrganizationElem=false" class="btn btn-small btn-primary">cancel</a></td>
-							</tr>
-							<tr ng-show="addPersonOrganizationElem" ng-repeat="o in organizations._embedded.organizations | filter: newPersonOrganization.name">
-								<td><a ng-click="setPersonOrganization(o)">{{o.name}}</a></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</form>
-			<div ng-show="newPersonView" class='text-right'>
+			<div ng-show="newTicketView" class='text-right'>
 				<a ng-click="cancel()" class="btn btn-small">cancel</a>
-				<a ng-click="addPerson()" class="btn btn-small btn-primary">Add</a>
+				<a ng-click="addTickets()" class="btn btn-small btn-primary">Add</a>
 			</div>
 		</div>
 	</div>
