--- a/rms-donation-manager/src/main/resources/static/persons.html
+++ b/rms-donation-manager/src/main/resources/static/persons.html
@@ -40,4 +40,25 @@
 			</tr>
 		</tbody>
 	</table>
+	<!-- Pager -->
+	<div class="text-center">
+		<ul ng-if="pager.totalPages" class="pagination">
+		    <li ng-class="{disabled:pager.currentPage === 1}">
+		        <a ng-click="setPage(1)">First</a>
+		    </li>
+		    <li ng-class="{disabled:pager.currentPage === 1}">
+		        <a ng-click="setPage(pager.currentPage - 1)">Previous</a>
+		    </li>
+		    <li ng-repeat="page in pager.pages" ng-class="{active:pager.currentPage === page}">
+		        <a ng-click="setPage(page)">{{page}}</a>
+		    </li>                
+		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
+		        <a ng-click="setPage(pager.currentPage + 1)">Next</a>
+		    </li>
+		    <li ng-class="{disabled:pager.currentPage === pager.totalPages}">
+		        <a ng-click="setPage(pager.totalPages)">Last</a>
+		    </li>
+		</ul>
+	</div>
+	
 </div>
