--- a/rms-donation-manager/src/main/resources/static/persons.html
+++ b/rms-donation-manager/src/main/resources/static/persons.html
@@ -35,7 +35,7 @@
 				<td>h:{{p.homePhoneNumber}}, c:{{p.cellPhoneNumber}},
 					w:{{workPhoneNumber}}</td>
 				<td>{{p.email}}</td>
-				<td> </td>
+				<td><a ng-click="deletePerson(p._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
 			</tr>
 		</tbody>
